--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -1,11 +1,40 @@
 /* =================================================================== */
-/* TILES & BOXES
+/* OGF TILES & BOXES
 ====================================================================== */
 @import 'vars';
 
-.tile, .tile-blue, .tile-white, .tile-alert {
+.tiletitlehr {
+  margin-top:           0;
+  height:               5px;
+  border:               none;
+  color:                $col-hrblue;
+  background-color:     $col-hrblue;
+}
+.tiletitles, .topictitles {
+  color:                $col-copygrey;
+  border-bottom:        1px dotted $col-basegrey;
+  padding-bottom:       10px;
+  margin-bottom:        15px;
+}
+.tiletitles {
+  font-size:            25px;
+}
+.topictitles {
+  font-size:            30px;
+}
+.tileDate {
+  font-weight:          $font-bold;
+  margin-bottom:        10px;
+}
+.tileText {
+  color:                $col-black;
+  &:hover {
+    color:              $col-black;
+  }
+}
+.tile, .tile-blue, .tile-white, .tile-alert, .tile-poll, .eventsNearYou {
   //box-shadow:           0 1px 2px $col-boxshadow;
-  margin-bottom:        20px;
+  margin-bottom:        10px;
   padding:              15px;
   min-width:            150px;
 }
@@ -39,8 +68,24 @@
     }
   }
 }
+
+.tileImgBack {
+  background-position:      center;
+  -webkit-background-size:  cover;
+  background-size:          cover;
+
+  .tiletitles {
+    font-weight:        $font-bold;
+  }
+  .tileDate {
+    color:              $col-speblue;
+  }
+  a {
+    color:              $col-speblue;
+  }
+}
 .whiteback, .tile-white {
-  background-color:   $col-white;
+  background-color:     $col-white;
 }
 .link-box, .tile-links {
   border-top: 4px solid $col-hrblue;
@@ -99,12 +144,20 @@
     }
   }
 }
+.poi-date {
+  color:            $col-red;
+  display:          block;
+  text-transform:   uppercase;
+  font-size:        10px !important;
+  font-weight:      700;
+  letter-spacing:   1px;
+}
 .featured-story {
   padding:              0;
   min-height:           360px;
 
   .story-wrap {
-    min-height:         360px;
+    height:             400px;
     color:              $col-white;
     background-size:    cover;
     position:           relative;
@@ -123,14 +176,71 @@
     }
   }
 }
+
+.story-text {
+      //height:           175px;
+      overflow:         hidden;
+}
+.whitefadebottom {
+  background:           $img-whitefade repeat-x bottom left;
+  height:               20px;
+  width:                100%;
+  position:             absolute;
+  bottom:               19px;
+  //border:               1px solid hotpink;
+}
+.sideListBoxTitle {
+  font-weight:          $font-bold;
+  font-size:            20px;
+  padding:              0 0 10px 0;
+  border-bottom:        1px dotted $col-white;
+  margin-bottom:        10px;
+}
+.sideListItem {
+  padding:              0 0 5px 0;
+  margin-bottom:        5px;
+  border-bottom:        1px solid $col-basegrey;
+
+}
+.sideListItem-borgry {
+  border-bottom:        1px solid $col-drkgrey;
+}
+.sideListItem-borwht {
+  border-bottom:        1px solid $col-white;
+}
+.sideListTitle {
+  font-size:            15px;
+  font-weight:          $font-bold;
+  margin-top:           5px;
+  padding:              5px 0;
+
+  a:hover {
+    color:              $col-bluehover;
+  }
+}
+.sideListDate {
+  color:                $col-yellow;
+  font-weight:          $font-light;
+}
+.sideListLock {
+  color:                $col-red;
+}
+.sideListTeaser {
+  padding:              0 0 10px 0;
+  border-bottom:        1px dotted $col-white;
+  margin-bottom:        10px;
+}
+.sideListIntro {
+  padding:              10px 0 0 0;
+}
 .tile-editorial {
   background-color:     $col-black;
-  color:                $col-white;
   padding:              15px;
-  min-height:           360px;
+  margin-bottom:        15px;
+  overflow:             hidden;
 
   .title1, .title2, .excerpt, .authorBio {
-    padding:0;
+    padding:            0;
   }
   .title1 {
     font-size:          13px;
@@ -156,49 +266,51 @@
   .authorBio {
     font-size:          10px;
   }
-  a {
-    color:$col-white;
-  }
 
+}
+.tile-editorial-fixed {
+  height:               400px;
+}
+.tile-editorial-txtwht {
+  color:                $col-white;
+  a {
+    color:              $col-white;
+  }
+}
+.tile-editorial-txtblck {
+  color:                $col-black;
+  a {
+    color:              $col-black;
+  }
+  .sideListDate {
+    color:              $col-red;
+  }
 }
 .tile-textbelow {
   padding-bottom:       20px;
 }
-.tiletitlehr {
-  margin-top:           0;
-  height:               5px;
-  border:               none;
-  color:                $col-hrblue;
-  background-color:     $col-hrblue;
-}
-.tiletitles {
-  color:                $col-copygrey;
-  font-size:            25px;
-  border-bottom:        1px dotted $col-basegrey;
-  padding-bottom:       10px;
-  margin-bottom:        15px;
-}
 .tile-curntIssue {
   min-height:           150px;
+  border-bottom:        1px dotted $col-black;
 
   //box-shadow:           0 1px 2px $col-boxshadow;
   margin-bottom:        20px;
-  padding:              15px;
+  padding:              15px 0;
 
   a {
-    color:                $col-black;
+    color:              $col-black;
   }
 
   .issueThumb {
     min-height:         150px;
-    padding:            0;
+    padding:            0 10px 10px 0;
   }
   .pub-date, .volume, .number {
     font-weight:        $font-bold;
   }
   .pub-date {
-    font-size: 20px;
-    margin-bottom:20px;
+    font-size:          20px;
+    margin-bottom:      20px;
   }
   .btn {
     background-color:   $col-blue;
@@ -207,34 +319,38 @@
 
 }
 .tile-poi {
-  padding:15px;
-  background-color:$col-lightgrey;
+  padding:              15px;
+  background-color:     $col-lightgrey;
 
   .poipic {
-    padding:0;
+    padding:            0;
   }
   .poiblurb {
-    color:            $col-black;
+    color:              $col-black;
     h3 {
-      font-size:15px;
-      font-weight:$font-bold;
-      margin: 0;
+      font-size:        15px;
+      font-weight:      $font-bold;
+      margin:           0;
     }
     p {
-      font-size:12px;
+      font-size:        12px;
     }
   }
 }
 #myCarousel {
   .carousel-indicators {
-    bottom: 0;
+    bottom:             0;
   }
 
   .carousel-inner {
-    height:             360px;
+    height:             400px;
     //border:             1px solid hotpink;
 
     .item {
+      height:             400px;
+      background-size:  cover;
+      background-position: center;
+
       img {
         width:          100%;
         height:         auto;
@@ -242,10 +358,203 @@
       .carousel-caption {
         background:     $img-back-black-50 repeat top left fixed;
         width:          100%;
-        top: 200px;
-        left: 0;
+        //top:            200px;
+        bottom:         0;
+        left:           0;
         padding-bottom: 30px;
       }
     }
   }
+}
+.eventsNearYou {
+
+  .locCurrent {
+    color:              $col-drkgrey;
+    font-size:          12px;
+    border-bottom:      1px solid $col-notsolightgrey;
+
+    .locName {
+      color:            $col-drkgrey;
+      font-weight:      $font-bold;
+    }
+  }
+  .eachEvent {
+    border-bottom:      1px solid $col-notsolightgrey;
+    padding-bottom:     5px;
+    .eventName {
+      font-weight:      $font-bold;
+    }
+    .eventDetails {
+      font-size:        12px;
+      text-align:       right;
+
+      .eventType {
+        font-weight:    $font-bold;
+      }
+    }
+  }
+}
+.tile-poll {
+  background-color:     $col-textblue;
+  color:                $col-speblue;
+
+  h1 {
+    color:              $col-white;
+    font-size:          25px;
+    border-bottom:      1px dotted grey;
+    padding:            0 0 10px 0;
+    margin:             0 0 10px 0;
+  }
+
+  .btn {
+    width:              100%;
+    font-weight:        $font-bold;
+    margin-top:         20px;
+  }
+
+  a {
+    color:              $col-speblue;
+    &:hover {
+      color:            $col-white;
+    }
+  }
+  .votes {
+    color:              $col-white;
+    font-weight:        $font-bold;
+  }
+}
+
+.becomeMember {
+  background-color:     $col-red;
+  color:                $col-white;
+  padding:              15px;
+  margin:               15px 0;
+  font-size:            20px;
+  a {
+    color:              $col-yellow;
+    font-weight:        $font-bold;
+    &:hover {
+      color:            $col-black;
+    }
+  }
+}
+.detailImgWrap, .detailImgWrapFull, .detailImgWrapLeft, .detailImgWrapSide, .poipic {
+  overflow:             hidden;
+  -webkit-background-size:cover;
+  background-size:      cover;
+  background-position:  center;
+}
+.detailImgWrap {
+  height:               250px;
+  margin-bottom:        5px;
+}
+.detailImgWrapFull {
+  height:               350px;
+  margin-bottom:        5px;
+}
+.detailImgWrapLeft {
+  min-height:           250px;
+}
+.detailImgWrapSide {
+  height:               150px;
+  margin-bottom:        5px;
+}
+.poipic {
+  min-height:           125px;
+}
+
+.forms {
+  border-top:           5px solid $col-hrblue;
+  margin-top:           0;
+  margin-bottom:        20px;
+  padding:              0 0 15px 0;
+  min-width:            150px;
+
+  h3 {
+    color:              $col-copygrey;
+    font-size:          25px;
+    border-bottom:      1px dotted $col-basegrey;
+    padding-bottom:     10px;
+    //padding:          0 15px 10px 15px;
+    margin-bottom:      15px;
+  }
+}
+.subscribe-div {
+  margin-top:           10px;
+}
+.briefListItem {
+  margin:               0 0 15px 0;
+  padding-top:          15px;
+  background:           $img-back-box no-repeat bottom right;
+  min-height:           100px;
+
+  img {
+    display: none;
+  }
+
+  a {
+    color:              $col-black;
+    &:hover {
+      color:            $col-bluehover;
+      text-decoration:  none;
+    }
+  }
+
+  h4 {
+    font-size:          18px;
+    margin:             0 0 5px 0;
+  }
+
+  .briefPub {
+    font-size:          10px;
+    font-weight:        $font-light;
+    color:              $col-boxshadow;
+    width:              100%;
+    text-align:         right;
+  }
+  .badge {
+    border-radius: 10px !important;
+    font-size:10px;
+  }
+  &:hover {
+    background-color:   $col-lightgrey;
+    cursor:             pointer;
+  }
+}
+.brief-date {
+  color:            $col-red;
+  display:          block;
+  text-transform:   uppercase;
+  font-size:        10px !important;
+  font-weight:      700;
+  letter-spacing:   1px;
+}
+.briefofinterest {
+  margin-bottom:    10px;
+
+  p {
+    margin:             6px 0 0 0;
+  }
+}
+.whiteFade {
+  background:           $img-back-white-75 repeat top left fixed;
+  height:               100%;
+  width:                100%;
+  padding:              10px;
+}
+
+.marketoForm {
+  margin-bottom:        15px;
+
+  form {
+      margin-top: 15px;
+  }
+}
+.coverblurb {
+  font-size: 14px;
+  line-height: 14px;
+}
+.covercredit {
+  margin: 10px 0 0 0;
+  font-size: 10px;
 }
