--- a/mainsite/static/twa/css/_adzones.scss
+++ b/mainsite/static/twa/css/_adzones.scss
@@ -3,29 +3,6 @@
 ====================================================================== */
 @import 'vars';
 
-
-.adZone1 {
-  #adLeaderboard {
-    height:               140px;
-    padding:              27px 0 0 0;
-  }
-  #adLeaderboardImg {
-    margin:               auto;
-  }
-}
-
-/* AD Zone2 */
-#adFold, .adZone2 {
-  padding:15px 0;
-  margin-top: 15px;
-  border-top: $dotted;
-
-  div {
-    padding-right:0;
-    padding-left:0;
-  }
-}
-
 .adZone6 {
   background-color: $col-lightgrey2;
   padding:0;
@@ -40,4 +17,42 @@
   margin-bottom:        20px;
   padding:              15px;
   background-color:     $col-lightgrey;
+}
+
+/* AD Zone1 */
+.adZone1 {
+  #adLeaderboard {
+    height:               140px;
+    padding:              27px 0 0 0;
+
+    .tile-adspeed {
+      padding: 0px;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+    }
+  }
+  #adLeaderboardImg {
+    margin:               auto;
+  }
+}
+
+/* AD Zone2 */
+#adFold, .adZone2 {
+  padding:15px 0;
+  margin: 15px 0;
+  //border-top: $dotted;
+  background-color:$col-notsolightgrey;
+
+  .tile-adspeed {
+      box-shadow: none;
+      margin-bottom: 0;
+      padding: 0;
+      background-color: transparent;
+  }
+
+  div {
+    padding-right:0;
+    padding-left:0;
+  }
 }
