--- a/mainsite/static/twa/css/mainstyle.scss
+++ b/mainsite/static/twa/css/mainstyle.scss
@@ -31,6 +31,9 @@ a {
     text-decoration:      none;
   }
 }
+.dummyClass {
+  font-size:              10px;
+}
 
 /* ************************ */
 /* HEAD FOOT & CONTENT      */
