--- a/mainsite/static/twa/css/_vars.scss
+++ b/mainsite/static/twa/css/_vars.scss
@@ -6,7 +6,8 @@ $col-white:             white;
 $col-menuwhite:         white;
 $col-black:             #2a2a2a;
 $col-copygrey:          #3d4044;
-$col-drkgrey:           #57575a;
+$col-grey:              #57575a;
+$col-drkgrey:          #424143;
 $col-basegrey:          grey;
 $col-boxshadow:         #b4b4b9;
 $col-notsolightgrey:    #e4e1d8;
@@ -17,9 +18,10 @@ $col-hrblue:            #0f1c97;
 $col-superback:         #193b44;
 $col-speblue:           #26416c;
 $col-speblue2:          #365d98;
+$col-twablue:           #32bbbc;
+$col-bluehover:         #2d9e9f;
 $col-fbShare:           #3B5998;
 $col-lInShare:          #007BB5;
-$col-bluehover:         #808bcf;
 $col-textblue:          #a3bce4;
 $col-twitShare:         #00ACED;
 $col-red:               #bf1d21;
