--- a/mainsite/static/twa/css/_footer.scss
+++ b/mainsite/static/twa/css/_footer.scss
@@ -1,13 +1,13 @@
 @import 'vars';
 
 .footerUpper {
-  background-color:   $col-blue;
+  background-color:   $col-twablue;
   font-family:        $font-titles;
   padding:            30px;
   margin:             30px 0 0 0;
 }
 .footerLower {
-  background-color:   $col-black;
+  background-color:   $col-drkgrey;
   color:              $col-white;
   font-family:        $font-titles;
   min-height:         100px;
