--- a/mainsite/static/twa/css/mainstyle.scss
+++ b/mainsite/static/twa/css/mainstyle.scss
@@ -49,6 +49,9 @@ a {
 .bigbol {
   font-weight: bold;
 }
+.activeLink {
+  color:              $col-yellow !important;
+}
 .red {
   color:              $col-red !important;
 }
