--- a/mainsite/templates/twa_home.html
+++ b/mainsite/templates/twa_home.html
@@ -9,12 +9,12 @@
             {% placeholder "title area" %}
         </div>
     </div>
-    <div class="row content-area">
+    <div class="row content-area padZero">
 
-        <div class="col-xs-12 col-sm-8 col-lg-7 col-lg-offset-1 featurecol">
+        <div class="col-xs-12 col-sm-8 featurecol">
             {% placeholder "feature" %}
         </div>
-        <div class="col-xs-12 col-sm-4 col-lg-3 editorialcol">
+        <div class="col-xs-12 col-sm-4 editorialcol">
             {% placeholder "editorial" %}
         </div>
 
