--- a/mainsite/static/twa/css/_header.scss
+++ b/mainsite/static/twa/css/_header.scss
@@ -106,6 +106,7 @@
   }
 
   .pubMenu {
+    font-family:        $font-titles;
     list-style-type:    none;
     margin:             0 0 20px 0;
     padding:            50px 0 0 0;
@@ -122,7 +123,8 @@
       color:            $col-menuwhite;
       text-align:       center;
       text-decoration:  none;
-      font-weight:      $font-bold;
+      font-weight:      $font-regular;
+      letter-spacing:   1px;
     }
 
     li a:hover {
