--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -152,8 +152,9 @@
   font-weight:      700;
   letter-spacing:   1px;
 }
+
 .featured-story {
-  padding:              0;
+  padding:              0 20px 0 0;
   min-height:           360px;
 
   .story-wrap {
@@ -163,14 +164,16 @@
     position:           relative;
 
     .story-text {
-      padding:          15px;
-      background:       $img-back-black-50 repeat top left fixed;
-      background-size:  100%;
+      padding:          75px 15px 15px 15px;
+      background:       $img-twa-feature repeat-x top right;
+      background-size:  contain;
       position:         absolute;
       bottom:           0;
       width:            100%;
+      height:           100%;
 
       h2 {
+        font-family:    $font-tiletitle;
         font-weight:    600;
       }
     }
@@ -199,8 +202,7 @@
 .sideListItem {
   padding:              0 0 5px 0;
   margin-bottom:        5px;
-  border-bottom:        1px solid $col-basegrey;
-
+  //border-bottom:        1px solid $col-basegrey;
 }
 .sideListItem-borgry {
   border-bottom:        1px solid $col-drkgrey;
