--- a/spe_blog/templates/spe_blog/plugins/on_the_cover.html
+++ b/spe_blog/templates/spe_blog/plugins/on_the_cover.html
@@ -1,7 +1,8 @@
 {% load i18n %}
 
-{% for issue in issues %}
-  {% if forloop.first %}
+{#{% for issue in issues %}#}
+{#  {% if forloop.first %}#}
+
     <article class="tile-curntIssue row">
         <a href="{{ issue.get_absolute_url }}">
             <div class="col-xs-5 issueThumb">
@@ -14,7 +15,7 @@
         </div>
     </article>
 
-  {% endif %}
-{% empty %}
-    <p class="well">{% trans "No issues available" %}</p>
-{% endfor %}
+{#  {% endif %}#}
+{#{% empty %}#}
+{#    <p class="well">{% trans "No issues available" %}</p>#}
+{#{% endfor %}#}
