--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -30,31 +30,8 @@
             </div>
         </div>
 
-        <div class="row dontPrintMe" id="topbar">
-            <div class="col-sm-6 topbarcol">
-                <ul class="topbarmenuleft">
-                    <li><a href="http://www.spe.org/">SPE</a></li>
-                    <li><a href="/jpt/">JPT</a></li>
-                    <li><a href="/ogf/">OGF</a></li>
-                    <li><a href="/hse/">HSE Now</a></li>
-                    <li><a href="/twa/" class="activeLink">The WAY Ahead</a></li>
-                </ul>
-            </div>
-            <div class="col-sm-4 text-right topbarcol">
-                <ul class="topbarmenuright">
-                    <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                    <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                    <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href=""><i class="fa fa-youtube-play"></i></a></li>
-                </ul>
-            </div>
-            <div class="col-sm-2 text-center topbarcol" id="signin">
-                {% if login.url %}
-                <li><a href="{{ login.url }}" id="global_login" class="loginLink"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ login.label }}</a></li>
-                {% endif %}
-            </div>
-
-        </div>
+        <!-- topbar -->
+        {% include 'include_topbar.html' %}
 
         <div class="row dontPrintMe" id="menubar">
             <div class="col-xs-12 col-sm-4 col-md-3" id="mainLogo">
