--- a/mainsite/templates/twa_base.html
+++ b/mainsite/templates/twa_base.html
@@ -69,10 +69,10 @@
         <div class="footerULeft col-md-3">
             <img src="{% static 'twa/img/twa_logo_white.svg' %}" class="footerLogo">
             <ul class="footerSocial">
-                <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                <li><a href=""><i class="fa fa-youtube-play"></i></a></li>
+                <li><a href="https://www.facebook.com/spemembers" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/SPEtweets" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://www.linkedin.com/groups/57660/profile"><i class="fa fa-linkedin" target="_blank"></i></a></li>
+                <li><a href="https://www.youtube.com/user/2012SPE"><i class="fa fa-youtube-play" target="_blank"></i></a></li>
             </ul>
             <p class="copyright">&copy;2003-2016 Society of Petroleum Engineers, All Rights Reserved.</p>
         </div>
@@ -104,10 +104,10 @@
             <div class="col-md-3">
                 <h3>SPE</h3>
                 <p><a href="http://www.spe.org/">SPE</a></p>
-                <p><a>JPT</a></p>
+                <p><a href="http://www.spe.org/jpt/">JPT</a></p>
                 <p><a href="/ogf/ogf-main-page/">OGF</a></p>
-                <p><a>SPE Journals</a></p>
-                <p><a>HSE Now</a></p>
+                <p><a href="http://www.spe.org/hsenow/">HSE Now</a></p>
+                <p><a href="http://www.spe.org/twa/">The WAY Ahead</a></p>
             </div>
         </div>
     </div>
