--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -104,6 +104,7 @@
                 <p><a href="http://www.spe.org/">SPE</a></p>
                 <p><a href="http://www.spe.org/jpt/">JPT</a></p>
                 <p><a href="/ogf/ogf-main-page/">OGF</a></p>
+                <p><a href="http://www.spe.org/publications/journals.php">Journals</a></p>
                 <p><a href="http://www.spe.org/hsenow/">HSE Now</a></p>
                 <p><a href="http://www.spe.org/twa/">The WAY Ahead</a></p>
             </div>
