--- a/mainsite/static/ogf/css/_adzones.scss
+++ b/mainsite/static/ogf/css/_adzones.scss
@@ -19,7 +19,7 @@
   box-shadow:           0 1px 2px $col-boxshadow;
   margin-bottom:        20px;
   padding:              15px;
-  background-color:     $col-ogflightgrey;
+  //background-color:     $col-ogflightgrey;
 }
 
 /* AD Zone1 */
@@ -44,8 +44,7 @@
 #adFold, .adZone2 {
   padding:15px 0;
   margin: 15px 0;
-  //border-top: $dotted;
-  background-color:$col-ogfnotsolightgrey;
+  //background-color:$col-ogfnotsolightgrey;
 
   .tile-adspeed {
       box-shadow: none;
