--- a/spe_blog/templates/spe_blog/plugins/brief_interest.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_interest.html
@@ -13,12 +13,12 @@
     <a href="{{ article.get_absolute_url }}">
         <div class="story-wrap row">
         {% if article.picture and article.picture.url %}
-            <div class="col-sm-3 poipic" style="background-image: url({{ article.picture.url }})"></div>
+            <div class="col-xs-3 poipic" style="background-image: url({{ article.picture.url }})"></div>
         {% else %}
-            <div class="col-sm-3 poipic"></div>
+            <div class="col-xs-3 poipic"></div>
         {% endif %}
 
-            <div class="col-sm-9 poiblurb">
+            <div class="col-xs-9 poiblurb">
                 <h3>{{ article.title }}</h3>
                 {% if article.date %}
                     <p class="poi-date">{{ article.date|date:"d F Y" }}</p>
