added the show_box to the cms_plugin.py and adjusted templates to use it instead of the one off the article or brief.  Now the artilcle one is checked first then we look at the users classifications ("PROFESSIONAL") and subscriptions("OGF") to determine if we need to show the box.

--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -56,7 +56,7 @@
 
         {% if article.is_readable == True %}
 
-            {% if article.show_paybox %}
+            {% if show_paybox %}
                 <div class="col-sm-12 becomeMember text-center">
                     <p>You have access to this full article to experience the outstanding content<br>
                         that is available to OGF subscribers and SPE members.</p>
