--- a/spe_blog/templates/spe_blog/plugins/brief_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_detail.html
@@ -28,7 +28,7 @@
 
             {% if article.is_readable == True %}
 
-                {% if article.show_paybox %}
+                {% if show_paybox %}
                     <div class="col-sm-12 becomeMember text-center">
                         <p>You are have access to this full article to experience the outstanding content that is available to OGF subscribers and SPE members.</p>
                         <p>Please <a href="">JOIN SPE</a> or <a href="">Subscribe to OGF</a><br>
