--- a/mainsite/static/twa/css/_header.scss
+++ b/mainsite/static/twa/css/_header.scss
@@ -124,7 +124,7 @@
       text-align:       center;
       text-decoration:  none;
       font-weight:      $font-regular;
-      letter-spacing:   1px;
+      //letter-spacing:   1px;
     }
 
     li a:hover {
