--- a/mainsite/static/twa/css/_tiles.scss
+++ b/mainsite/static/twa/css/_tiles.scss
@@ -213,6 +213,7 @@
 .sideListTitle {
   font-size:            15px;
   font-weight:          $font-bold;
+  font-family:          $font-tiletitle;
   margin-top:           5px;
   padding:              5px 0;
 
