--- a/mainsite/static/twa/css/_vars.scss
+++ b/mainsite/static/twa/css/_vars.scss
@@ -30,8 +30,10 @@ $col-sponsoryellow:     #ffca4c;
 //$col-red:            #d92226;
 
 $font-main:             "proxima-nova",sans-serif;
-$font-titles:           "Oswald", sans-serif;
-$font-tiletitle:        "Bitter", serif;
+//$font-titles:           "Oswald", sans-serif;
+$font-titles:           "Roboto Slab", serif;
+//$font-tiletitle:        "Bitter", serif;
+$font-tiletitle:        "Roboto Slab", serif;
 
 $font-thin:             100;
 $font-light:            300;
