put the same logic under both the articles and briefs for the condition where the article is not readable.  Now checks the visitor for permission to view the article even though it is always locked.   Separate logic from the you are seeing this because one.

--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -54,7 +54,7 @@
         </div>
     {% endif %}
 
-        {% if article.is_readable == True %}
+        {% if is_readable == True %}
 
             {% if show_paybox %}
                 <div class="col-sm-12 becomeMember text-center">
