--- a/spe_blog/templates/spe_blog/plugins/brief_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_detail.html
@@ -26,7 +26,7 @@
 
         <div class="col-sm-12 articleBodyText">
 
-            {% if article.is_readable == True %}
+            {% if is_readable == True %}
 
                 {% if show_paybox %}
                     <div class="col-sm-12 becomeMember text-center">
