added /en/ to template links to try to get them to work
this is probably not a good idea since it locks us into en as a
language but getting it done so we can spider

--- a/mainsite/templates/ogf_base.html
+++ b/mainsite/templates/ogf_base.html
@@ -33,7 +33,7 @@
 
         <div class="row dontPrintMe" id="menubar">
             <div class="col-xs-12 col-sm-4 col-md-3 col-lg-offset-1" id="mainLogo">
-                <a href="/ogf/ogf-main-page/"><img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}" class="img-responsive"></a>
+                <a href="/en/ogf/ogf-main-page/"><img src="{% static 'ogf/img/ogf-logo-horizontal.svg' %}" class="img-responsive"></a>
             </div>
             <div class="col-md-8 col-lg-7 text-right">
                 <ul class="pubMenu">
@@ -77,24 +77,24 @@
         <div class="footerURight col-md-9">
             <div class="col-md-2 col-md-offset-1">
                 <h3>MAIN</h3>
-                <p><a href="/ogf/topics/">Topics</a></p>
-                <p><a href="/ogf/people/">People</a></p>
-                <p><a href="/ogf/peer-reviewed-papers/">Papers</a></p>
-                <p><a href="/ogf/issues/">Archive</a></p>
+                <p><a href="/en/ogf/topics/">Topics</a></p>
+                <p><a href="/en/ogf/people/">People</a></p>
+                <p><a href="/en/ogf/peer-reviewed-papers/">Papers</a></p>
+                <p><a href="/en/ogf/issues/">Archive</a></p>
             </div>
             <div class="col-md-3">
                 <h3>DEPARTMENTS</h3>
-                <p><a href="/ogf/pfc-director/">From the PFC Technical Director</a></p>
-                <p><a href="/ogf/culture-matters/">Culture Matters</a></p>
-                <p><a href="/ogf/global-market-trends/">Global Market Trends</a></p>
-                <p><a href="/ogf/pfc-roundup/">PFC Roundup</a></p>
-                <p><a href="/ogf/technology-marketplace/">Technology Marketplace</a></p>
+                <p><a href="/en/ogf/pfc-director/">From the PFC Technical Director</a></p>
+                <p><a href="/en/ogf/culture-matters/">Culture Matters</a></p>
+                <p><a href="/en/ogf/global-market-trends/">Global Market Trends</a></p>
+                <p><a href="/en/ogf/pfc-roundup/">PFC Roundup</a></p>
+                <p><a href="/en/ogf/technology-marketplace/">Technology Marketplace</a></p>
 {#                <p><a>Calendar</a></p>#}
-                <p><a href="/ogf/peer-reviewed-papers/">Peer-Reviewed Papers</a></p>
+                <p><a href="/en/ogf/peer-reviewed-papers/">Peer-Reviewed Papers</a></p>
             </div>
             <div class="col-md-3">
                 <h3>UTILITY</h3>
-                <p><a href="/ogf/about-ogf/">About</a></p>
+                <p><a href="/en/ogf/about-ogf/">About</a></p>
                 <p><a href="http://www.spe.org/contact/">Contact</a></p>
                 <p><a href="http://www.spe.org/publications/subscribe.php">Subscribe</a></p>
                 <p><a href="http://www.spe.org/sales/publications.php">Advertise</a></p>
@@ -103,7 +103,7 @@
                 <h3>SPE</h3>
                 <p><a href="http://www.spe.org/">SPE</a></p>
                 <p><a href="http://www.spe.org/jpt/">JPT</a></p>
-                <p><a href="/ogf/ogf-main-page/">OGF</a></p>
+                <p><a href="/en/ogf/ogf-main-page/">OGF</a></p>
                 <p><a href="http://www.spe.org/publications/journals.php">Journals</a></p>
                 <p><a href="http://www.spe.org/hsenow/">HSE Now</a></p>
                 <p><a href="http://www.spe.org/twa/">The WAY Ahead</a></p>
