--- a/mainsite/templates/include_topbar.html
+++ b/mainsite/templates/include_topbar.html
@@ -4,7 +4,7 @@
         <ul class="topbarmenuleft">
             <li><a href="http://www.spe.org/">SPE</a></li>
             <li><a href="http://www.spe.org/jpt/">JPT</a></li>
-            <li><a href="http://www.spe.org/en/ogf/ogf-main-page/">OGF</a></li>
+            <li><a href="https://www.spe.org/en/ogf/ogf-main-page/">OGF</a></li>
             <li><a href="http://www.spe.org/hsenow/">HSE Now</a></li>
             <li><a href="http://www.spe.org/twa/">The WAY Ahead</a></li>
         </ul>
