fixed the http https error message with ads.  Also, fixed the topics in the article detail pages to have en in the link.

--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -22,7 +22,7 @@
             <h4>Topics</h4>
             <ul>
             {% for topic in article.topics.all %}
-                    <li><a href="/ogf/topics/?topic={{ topic.id }}">{{ topic }}</a></li>
+                    <li><a href="/en/ogf/topics/?topic={{ topic.id }}">{{ topic }}</a></li>
             {% endfor %}
             </ul>
         </div>
