--- a/spe_blog/templates/spe_blog/brief_detail.html
+++ b/spe_blog/templates/spe_blog/brief_detail.html
@@ -5,7 +5,7 @@
     <div class="row adRow2" id="adRow2">
         <div class="col-xs-12 adZone2 text-center" id="adZone2">
             <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 2 1160x60 [Any Dimension] -->
-            <script type="text/javascript" src="http://g.adspeed.net/ad.php?do=js&zid=79086&oid=7699&wd=-1&ht=-1&target=_blank"></script>
+            <script type="text/javascript" src="://g.adspeed.net/ad.php?do=js&zid=79086&oid=7699&wd=-1&ht=-1&target=_blank"></script>
             <!-- AdSpeed.com End -->
         </div>
     </div>
