--- a/spe_blog/templates/spe_blog/plugins/article_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/article_detail.html
@@ -45,7 +45,7 @@
     <div class="col-sm-12 articleBodyText">
 
     {% if article.tags.count >= 1 %}
-        <div class="col-sm-12 article-tags">
+        <div class="col-sm-12 article-tags dontPrintMe">
             <ul>
             {% for tag in article.tags.all %}
                     <li><a href="{{ article.publication.tags_url.url.get_absolute_url }}?tag={{ tag.id }}"><i class="fa fa-tags" aria-hidden="true"></i> {{ tag }}</a></li>
