Ongoing print saga 6

--- a/mainsite/static/ogf/css/mainstyle.scss
+++ b/mainsite/static/ogf/css/mainstyle.scss
@@ -120,58 +120,58 @@ a {
     margin-left:      25px;
   }
 }
-/* PRINT SIZE */
-@media print {
-  html * {
-    font-family: Arial, sans-serif;
-    font-size: 20pt;
-    width:  100%;
-  }
-  body {
-    //background: white;
-    font-size: 20pt;
-    width:  100%;
-  }
-  body * {
-    visibility: hidden;
-  }
-
-  $printFontSize: 20px;
-
-  #printMe, #printMe * {
-    visibility: visible;
-    font-size: $printFontSize;
-    //width:  100%;
-  }
-  .dontPrintMe, .dontPrintMe * {
-    visibility: hidden;
-    display: none;
-  }
-  #printMe {
-    position: absolute;
-    left: 0;
-    top: 0;
-    font-size: $printFontSize;
-    //width:  100%;
-
-    table {
-      table-layout: fixed;
-
-      td {padding:10px;}
-    }
-
-    img {
-      page-break-before: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
-      page-break-after: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
-      page-break-inside: avoid; /* or 'auto' */
-    }
-  }
-  .articleBodyText, .articleBodyText p {
-    font-family: Arial, sans-serif;
-    font-size: $printFontSize;
-    width:  100%;
-  }
-}
+///* PRINT SIZE */
+//@media print {
+//  html * {
+//    font-family: Arial, sans-serif;
+//    font-size: 20pt;
+//    width:  100%;
+//  }
+//  body {
+//    //background: white;
+//    font-size: 20pt;
+//    width:  100%;
+//  }
+//  body * {
+//    visibility: hidden;
+//  }
+//
+//  $printFontSize: 12pt;
+//
+//  #printMe, #printMe * {
+//    visibility: visible;
+//    font-size: $printFontSize;
+//    //width:  100%;
+//  }
+//  .dontPrintMe, .dontPrintMe * {
+//    visibility: hidden;
+//    display: none;
+//  }
+//  #printMe {
+//    position: absolute;
+//    left: 0;
+//    top: 0;
+//    font-size: $printFontSize;
+//    //width:  100%;
+//
+//    table {
+//      table-layout: fixed;
+//
+//      td {padding:10px;}
+//    }
+//
+//    img {
+//      page-break-before: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
+//      page-break-after: auto; /* 'always,' 'avoid,' 'left,' 'inherit,' or 'right' */
+//      page-break-inside: avoid; /* or 'auto' */
+//    }
+//  }
+//  .articleBodyText, .articleBodyText p {
+//    font-family: Arial, sans-serif;
+//    font-size: $printFontSize;
+//    width:  100%;
+//  }
+//}
 .panel {
   background-color: transparent;
 }
